--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.0.3",
     "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
     "dotenv": "^9.0.2",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
@@ -37,5 +36,8 @@
     "ts-node": "^9.1.1",
     "typechain": "^5.0.0",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.3.2"
   }
 }
