--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
-    "coverage": "npm run build && npx hardhat coverage --temp artifacts --network coverage"
+    "coverage": "npm run build && npx hardhat coverage --temp artifacts --network coverage",
+    "deploy:kovan": "npx hardhat --network kovan deploy",
+    "etherscan:kovan": "npx hardhat --network kovan etherscan-verify"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.2.1",
+    "hardhat-deploy": "^0.9.3",
     "solidity-coverage": "^0.7.16",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
